# dsa-learning-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  api-examples-report.md  generated-test-metrics.md  justfile  orchestrator_metrics.md  pyproject.toml  secondary-verification-report.md  secondary_verification_report.md  test_data.json
architecture/: general-architecture.mermaid  materials-agent-architecture.mermaid  orchestrator-architecture.mermaid
material-examples/: 1.json  2.json  3.json  4.json  5.json  README.md  test_topics.json
material-examples/results/: advanced_01_result.json  advanced_02_result.json  advanced_03_result.json  advanced_04_result.json  advanced_05_result.json  beginner_01_result.json  beginner_02_result.json  beginner_03_result.json  beginner_04_result.json  beginner_05_result.json  intermediate_01_result.json  intermediate_02_result.json  intermediate_03_result.json  intermediate_04_result.json  intermediate_05_result.json  materials_agent_v2_evaluation_report.md  materials_agent_v2_evaluation_results.json
src/: config.py  exceptions.py  main.py
src/agents/: input_validation_agent.py  llm_router_agent.py  materials_agent.py  materials_agent_v2.py  registry.py  support_agent.py  test_generation_agent.py  verification_agent.py
src/core/: database.py  llm.py  logging_handler.py  memory_manager.py  vector_store.py
src/data_processing/: __init__.py  db_populator.py  pdf_parser.py  text_splitter.py
src/metrics/: analytics_service.py  deepeval_metrics.py  health_service.py  metrics_collector.py  metrics_exporter.py
src/models/: content_guard_schemas.py  fourget_models.py  orchestrator_schemas.py  react_schemas.py  schemas.py  tool_schemas.py
src/prompts/: content_guard_prompts.py  evaluation_prompts.py  final_generation_prompts.py  generation_prompts.py  thought_generation_prompts.py  validation_prompts.py
src/retrieval/: tfidf_retriever.py
src/routers/: assessment.py  health.py  llm_router.py  materials.py  materials_v2.py  orchestrator.py  support.py  test.py  tests.py  validation.py  verification.py
src/scripts/: build_tfidf_corpus.py  cleanup_memory.py  export_procedural_patterns.py  export_tot_analytics.py  generate_codebase_context.py  generate_endpoint_report.py  init_memory_collections.py  measure_materials_agent_v2.py  measure_orchestrator_metrics.py  measure_secondary_verification.py  measure_test_generation.py  migrate_to_v2.py  populate_db.py  seed_knowledge_base.py  test_generation_agent_manual.py
src/tools/: adaptive_rag_tool.py  base_tool.py  concept_extractor_tool.py  corrective_rag_tool.py  memory_retrieval_tool.py  tool_registry.py  web_scraper_tool.py  web_search_tool.py
(+31 files in other folders)
